--- a/src/app/film-catalog/films/films.component.html
+++ b/src/app/film-catalog/films/films.component.html
@@ -1,7 +1,10 @@
 
-  <mat-grid-list cols="4" rowHeight="600px" rowWidth="600px">
-      <mat-grid-tile></mat-grid-tile>
-      <mat-grid-tile colspan="2">
+  <!-- <mat-grid-list cols="4" rowHeight="600px" rowWidth="600px">
+      <mat-grid-tile></mat-grid-tile> -->
+      <!-- <mat-grid-tile colspan="2"> -->
+        <div>
+          
+        </div>
 
           <mat-card class="example-card" *ngFor="let film of films">
               <mat-card-header>
@@ -19,8 +22,8 @@
               </mat-card-actions>
             </mat-card>
 
-      </mat-grid-tile>
+      <!-- </mat-grid-tile>
       <mat-grid-tile></mat-grid-tile>
-  </mat-grid-list>
+  </mat-grid-list> -->
 
 
