--- a/src/app/film-catalog/films/films.component.css
+++ b/src/app/film-catalog/films/films.component.css
@@ -1,6 +1,8 @@
-.example-card {
-    max-width: 400px;
-  }
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+}
 
-
-  div {color: red}
+.card-container__item {
+  max-width: 370px;
+}
