--- a/src/app/film-catalog/films/films.component.html
+++ b/src/app/film-catalog/films/films.component.html
@@ -2,26 +2,23 @@
   <!-- <mat-grid-list cols="4" rowHeight="600px" rowWidth="600px">
       <mat-grid-tile></mat-grid-tile> -->
       <!-- <mat-grid-tile colspan="2"> -->
-        <div>
-          
-        </div>
-
-          <mat-card class="example-card" *ngFor="let film of films">
-              <mat-card-header>
-                <mat-card-title>{{film.name}}</mat-card-title>
-              </mat-card-header>
-              <img mat-card-image [src]="film.imgUrl">
-              <mat-card-content>
-                  <details-inner>
-                      {{film.description}}
-                  </details-inner>
-              </mat-card-content>
-              <mat-card-actions>
-                <button mat-button>Открыть</button>
-                <button mat-button>Редактировать</button>
-              </mat-card-actions>
-            </mat-card>
-
+  <div class="card-container">
+      <mat-card class="card-container__item" *ngFor="let film of films">
+          <mat-card-header>
+            <mat-card-title>{{film.name}}</mat-card-title>
+          </mat-card-header>
+          <img mat-card-image [src]="film.imgUrl">
+          <mat-card-content>
+              <details-inner>
+                  {{film.description}}
+              </details-inner>
+          </mat-card-content>
+          <mat-card-actions>
+            <button mat-button>Открыть</button>
+            <button mat-button>Редактировать</button>
+          </mat-card-actions>
+        </mat-card>
+  </div>
       <!-- </mat-grid-tile>
       <mat-grid-tile></mat-grid-tile>
   </mat-grid-list> -->
